k8s/template/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: zhanghaichang.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
